# pika

./: Cargo.toml
src/: chu.rs  db.rs  import.rs  init.rs  lib.rs  main.rs  mapping.rs  mst.rs  parsedir.rs  pt.rs  schema.rs  schema.sql  serve.rs  store.rs  sync.rs  tomldir.rs
src/db/: mod.rs  mst.rs  option.rs  pt.rs  sync.rs  table.rs
src/mapper/: mapping.rs  mod.rs
src/serve/: document.rs  entity.rs  mod.rs  source.rs
src/store/: document.rs  entity.rs  mod.rs  source.rs
templates/: base.html  entity_edit.html  index.html  properties_edit_partial.html  properties_view_partial.html  view.html
templates/document/: search.html  search_result_partial.html
templates/entity/: edit.html  properties_edit_partial.html  properties_view_partial.html
templates/source/: add_partial.html  index.html  list.html  list_partial.html
tests/: import_test.rs  init_test.rs  schema.toml
tests/data/person/: pikachu.toml
tests/mapping/: person.toml
tests/schema/: person.toml  thing.toml
