[package]
name = "pika"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.45", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }

[dev-dependencies]
tempdir = "0.3.7"
