[package]
name = "pika"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
clap = { version = "4.5.45", features = ["derive"] }
include_dir = "0.7.4"
jaq-core = "=3.0.0-alpha"
jaq-json = {version = "=2.0.0-alpha", features = ["toml"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.9.8", features = ["serde"] }
topological-sort = "0.2.2"

[dev-dependencies]
tempdir = "0.3.7"
